[package]
name = "async-pty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
futures-util = { version = "0.3.23", features = ["sink"] }
portable-pty = "0.7.0"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
